--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,3 @@
 site_name: EpiTools Wiki Pages
 docs_dir: source
-repo_url: https://bitbucket.org/davideheller/epitools/
+repo_url: https://github.com/epitools
